--- a/WebVIsualisation/Webpages/data.html
+++ b/WebVIsualisation/Webpages/data.html
@@ -42,7 +42,7 @@
 
                         <ul class="dropdown-menu">
 
-                          <li><a href="maxtemp.html">Max Temperature</a></li>
+                          <li><a href="maxtemperature.html">Max Temperature</a></li>
 
                           <li><a href="humidity.html">Humidity</a></li>
 
